# 42_Core

Milestone 0/libft/: ft_atoi.c
Milestone 1/ft_printf/: main.c
Milestone 1/get_next_line/: Makefile  get_next_line.c  get_next_line.h  get_next_line_utils.c  test.c
Milestone 2/: CMakeLists.txt  push_swap.c  push_swap.h
Milestone 2/exam_rank_2/level 3/: a.out  add_prime_sum.c  ft_list_size.c  hidencp.c  lcm.c  paramsum.c  pgcd.c  print_hex.c  rstr_capitalizer.c  str_capitalizar.c  tab_mult.c  test.c
Milestone 2/exam_rank_2/level 4/: a.out  sort_list.c
Milestone 2/fract-ol/: fractol  fractol.c  main.c  makefile
Milestone 2/fract-ol/src/: main.c
Milestone 2/minitalk/: client  client.c  makefile  server  server.c
Milestone 2/minitalk/libft/: libft.h
Milestone 2/push_swap/: find.c  free_error.c  ft_qsort.c  main.c  makefile  nodes_init.c  push_swap  push_swap.c  push_swap.h  random_numbers.c  rot_command.c  rotates.c  sort_big.c  sort_small.c  sort_utils.c  sorting.c  stack_utils.c  swaps.c
Milestone 2/push_swap/libft/: Makefile  ft_atoi.c  ft_utils.c  libft.h
Milestone 2/push_swap_29_11/: free_error.c  ft_qsort.c  makefile  push_swap.c  push_swap.h  rotates.c  stack_utils.c  swaps.c
Milestone 2/push_swap_29_11/libft/: ft_strcpy.c  libft.h
exam03/filter/: filter.c
exam03/ft_printf/: ft_printf.c
exam03/get_next_line/: gnl.c  (+1 more)
ft_printf/: Makefile  ft_printf.c  ft_printf.h  ft_utils.c
get_next_line/: Makefile  get_next_line.h  get_next_line_utils.c  test.h
libft/: Makefile  libft.h
tests/: example.txt  gnl.c  gnl.h  gnl_utils.c  main.c
(+13 files in other folders)
